<resources>
    <string name="app_name">My Application</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_list_of_trips">ListOfTrips</string>
    <string name="title_activity_add_trip_details">AddTripDetails</string>
    <string name="search_start_address">Search for start address</string>
    <string name="search_end_address">Search for end address</string>
    <string name="save">Save</string>
    <string name="TripSelected">tripSelected</string>
    <string name="TripIncomplete">Trip Data is incomplete.</string>
    <string name="OK">Ok</string>
    <string name="walking">Walking</string>
    <string name="driving">Driving</string>
    <string name="tripDataSaved">tripDataSaved</string>
    <string name="Start">Start: </string>
    <string name="End">End: </string>
    <string name="start_tracking">Start Tracking</string>
    <string name="stop_tracking">Stop Tracking</string>
</resources>
