<?xml version="1.0" encoding="utf-8"?>


    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/fab_margin"

        android:orientation="vertical">

        <AutoCompleteTextView
            android:id="@+id/startAddressSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_start_address"
            android:inputType="textCapSentences"
            />

        <AutoCompleteTextView
            android:id="@+id/endAddressSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_end_address"
            android:inputType="textCapSentences"

            />
<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RadioButton
            android:id="@+id/walking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/walking"
            android:layout_margin="@dimen/fab_margin"

            />
    <RadioButton
            android:id="@+id/driving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/driving"
            android:layout_margin="@dimen/fab_margin"

            />
</RadioGroup>
        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/save"
            />

    <Button
        android:id="@+id/tracking"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_tracking" />
</LinearLayout>


